--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: ["windows-latest", "ubuntu-latest", "macos-latest"]
+        os: ["ubuntu-latest", "macos-latest"]
         python-version: ["3.8", "3.9"]
         experimental: [false]
         include:
@@ -27,44 +27,28 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v2
 
-      - name: Setup Conda Environment
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
-          miniconda-version: "latest"
           python-version: ${{ matrix.python-version }}
-          mamba-version: "*"
-          channels: conda-forge,defaults
-          environment-file: continuous_integration/environment.yaml
-          activate-environment: test-environment
+
+      - name: Install dependencies
+        run: |
+          pip install -U codecov pytest pytest-cov pyyaml "dpath<1.5" trollsift six numpy posttroll
 
       - name: Install unstable dependencies
         if: matrix.experimental == true
-        shell: bash -l {0}
         run: |
           python -m pip install \
-          -f https://7933911d6844c6c53a7d-47bd50c35cd79bd838daf386af554a83.ssl.cf2.rackcdn.com \
-          --no-deps --pre --upgrade \
-          matplotlib \
-          numpy \
-          pandas \
-          scipy; \
-          python -m pip install \
           --no-deps --upgrade \
-          git+https://github.com/dask/dask \
-          git+https://github.com/dask/distributed \
-          git+https://github.com/zarr-developers/zarr \
-          git+https://github.com/Unidata/cftime \
-          git+https://github.com/mapbox/rasterio \
-          git+https://github.com/pydata/bottleneck \
-          git+https://github.com/pydata/xarray;
+          git+https://github.com/pytroll/posttroll \
+          git+https://github.com/pytroll/trollsift;
 
       - name: Install activefires-pp
-        shell: bash -l {0}
         run: |
           pip install --no-deps -e .
 
       - name: Run unit tests
-        shell: bash -l {0}
         run: |
           pytest --cov=activefires-pp activefires_pp/tests --cov-report=xml
 
