--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest --cov=activefires-pp activefires_pp/tests --cov-report=xml
+          pytest --cov=activefires_pp activefires_pp/tests --cov-report=xml
 
       - name: Upload unittest coverage to Codecov
         uses: codecov/codecov-action@v1
