Go back to using conda for CI testing
Signed-off-by: Adam.Dybbroe <a000680@c21856.ad.smhi.se>

--- a/continuous_integration/environment.yaml
+++ b/continuous_integration/environment.yaml
@@ -6,7 +6,6 @@ dependencies:
   - toolz
   - sphinx
   - matplotlib
-  - scipy
   - pyyaml
   - pyproj
   - coveralls
@@ -14,6 +13,7 @@ dependencies:
   - codecov
   - behave
   - mock
+  - numpy
   - geojson
   - shapely
   - pycrs
