Add for travis and try fix coverage badge
Signed-off-by: Adam.Dybbroe <a000680@c21856.ad.smhi.se>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,3 +69,4 @@ jobs:
           flags: unittests
           file: ./coverage.xml
           env_vars: OS,PYTHON_VERSION,UNSTABLE
+          fail_ci_if_error: false
