--- a/examples/fires_pp.yaml
+++ b/examples/fires_pp.yaml
@@ -7,6 +7,8 @@ af_pattern_ibands: AFIMG_{platform:s}_d{start_time:%Y%m%d_t%H%M%S%f}_e{end_hour:
 geojson_file_pattern_national: AFIMG_{platform:s}_d{start_time:%Y%m%d_t%H%M%S}.geojson
 geojson_file_pattern_regional: AFIMG_{platform:s}_d{start_time:%Y%m%d_t%H%M%S}_{region_name:s}.geojson
 
+regional_shapefiles_format: omr_{region_code:s}_Buffer.{ext:s}
+
 output_dir: /path/where/the/filtered/results/will/be/stored
 
 timezone: Europe/Stockholm
