Add coverage run section for Coveralls
Signed-off-by: Adam.Dybbroe <a000680@c21856.ad.smhi.se>

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ setup_requires =
     setuptools_scm_git_archive
 
 [bdist_rpm]
-provides=fire_notifications, activefires_pp
+provides=activefires_pp
 requires=posttroll
 release=1
 
@@ -15,3 +15,7 @@ universal=1
 
 [flake8]
 max-line-length = 120
+
+[coverage:run]
+relative_files = True
+
