Adding for secret pypi-password
Signed-off-by: Adam.Dybbroe <a000680@c21856.ad.smhi.se>

--- a/.github/workflows/deploy-sdist.yaml
+++ b/.github/workflows/deploy-sdist.yaml
@@ -22,4 +22,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.4.1
         with:
           user: __token__
-          password: ${{ secrets.test_pypi_password }}
+          password: ${{ secrets.pypi_password }}
