--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ setup_requires =
 
 [bdist_rpm]
 provides=activefires_pp
-requires=posttroll
+requires=posttroll trollsift pandas geojson fona matplotlib pycrs netifaces cartopy shapely
 release=1
 
 no-autoreq=True
