--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: true
       matrix:
         os: ["ubuntu-latest", "macos-latest"]
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
         experimental: [false]
         include:
           - python-version: "3.10"
@@ -42,12 +42,12 @@ jobs:
         shell: bash -l {0}
         run: |
           python -m pip install \
-          -f https://7933911d6844c6c53a7d-47bd50c35cd79bd838daf386af554a83.ssl.cf2.rackcdn.com \
           --no-deps --pre --upgrade \
           matplotlib \
           numpy \
           pandas \
-          scipy; \
+          scipy \
+          freezegun; \
           python -m pip install \
           --no-deps --upgrade \
           git+https://github.com/pytroll/posttroll \
