Try fix workflow dependencies
Signed-off-by: Adam.Dybbroe <a000680@c21856.ad.smhi.se>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,10 +46,10 @@ jobs:
           matplotlib \
           numpy \
           pandas \
-          scipy \
-          freezegun; \
+          scipy; \
           python -m pip install \
           --no-deps --upgrade \
+          freezegun \
           git+https://github.com/pytroll/posttroll \
           git+https://github.com/pytroll/trollsift;
 
