--- a/examples/fires_pp.yaml
+++ b/examples/fires_pp.yaml
@@ -11,5 +11,7 @@ regional_shapefiles_format: omr_{region_code:s}_Buffer.{ext:s}
 
 output_dir: /path/where/the/filtered/results/will/be/stored
 
+filepath_detection_id_cache = /path/to/the/detection_id/cache
+
 timezone: Europe/Stockholm
 # pytz.all_timezones
