Try be consistent in package name with underscore
Signed-off-by: Adam.Dybbroe <a000680@c21856.ad.smhi.se>

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ setup_requires =
     setuptools_scm_git_archive
 
 [bdist_rpm]
-provides=activefires-pp
+provides=activefires_pp
 requires=posttroll trollsift pandas geojson fona matplotlib pycrs netifaces cartopy shapely pint
 release=1
 
