Add option to control which product(name)s should trigger a notification
Signed-off-by: Adam.Dybbroe <a000680@c21856.ad.smhi.se>

--- a/examples/fire_notifier.yaml
+++ b/examples/fire_notifier.yaml
@@ -2,6 +2,10 @@
 publish_topic: VIIRS/L2/MSB/National
 subscribe_topics: VIIRS/L2/Fires/PP/National
 
+products:
+  - afimg
+  - afimg_some_other_geoid
+
 smtp_server: smtp.mydomain.se
 
 domain: mydomain.se
